# Backend/config/swagger_output.json
@@ -7,7 +7,7 @@
   },
   "servers": [
     {
-      "url": "http://localhost:5000",
+      "url": "https://healthcrm.onrender.com",
       "description": "Local server"
     }
   ],
@@ -61,86 +61,6 @@
                   "username",
                   "email",
                   "password"
-                ]
-              }
-            }
-          }
-        }
-      }
-    },
-    "/api/auth/registerstaff": {
-      "post": {
-        "tags": [
-          "Auth"
-        ],
-        "description": "",
-        "parameters": [
-          {
-            "name": "authorization",
-            "in": "header",
-            "schema": {
-              "type": "string"
-            }
-          }
-        ],
-        "responses": {
-          "201": {
-            "description": "Created"
-          },
-          "400": {
-            "description": "Bad Request"
-          },
-          "401": {
-            "description": "Unauthorized"
-          },
-          "403": {
-            "description": "Forbidden"
-          }
-        },
-        "requestBody": {
-          "required": true,
-          "content": {
-            "application/json": {
-              "schema": {
-                "type": "object",
-                "properties": {
-                  "username": {
-                    "type": "string",
-                    "example": "Staff Member"
-                  },
-                  "email": {
-                    "type": "string",
-                    "example": "staff@example.com"
-                  },
-                  "password": {
-                    "type": "string",
-                    "example": "password123"
-                  },
-                  "role_id": {
-                    "type": "integer",
-                    "example": 1
-                  },
-                  "role_name": {
-                    "type": "string",
-                    "example": "Staff"
-                  },
-                  "team_id": {
-                    "type": "integer",
-                    "example": 1
-                  },
-                  "team_name": {
-                    "type": "string",
-                    "example": "Team"
-                  }
-                },
-                "required": [
-                  "username",
-                  "email",
-                  "password",
-                  "role_id",
-                  "role_name",
-                  "team_id",
-                  "team_name"
                 ]
               }
             }
@@ -872,6 +792,137 @@
           },
           "500": {
             "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/api/staff/registerstaff": {
+      "post": {
+        "tags": [
+          "Auth"
+        ],
+        "description": "",
+        "parameters": [
+          {
+            "name": "authorization",
+            "in": "header",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "Created"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        },
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "username": {
+                    "type": "string",
+                    "example": "Staff Member"
+                  },
+                  "email": {
+                    "type": "string",
+                    "example": "staff@example.com"
+                  },
+                  "password": {
+                    "type": "string",
+                    "example": "password123"
+                  },
+                  "role_id": {
+                    "type": "integer",
+                    "example": 1
+                  },
+                  "role_name": {
+                    "type": "string",
+                    "example": "Staff"
+                  },
+                  "team_id": {
+                    "type": "integer",
+                    "example": 1
+                  },
+                  "team_name": {
+                    "type": "string",
+                    "example": "Team"
+                  }
+                },
+                "required": [
+                  "username",
+                  "email",
+                  "password",
+                  "role_id",
+                  "role_name",
+                  "team_id",
+                  "team_name"
+                ]
+              }
+            }
+          }
+        }
+      }
+    },
+    "/api/staff/loginstaff": {
+      "post": {
+        "tags": [
+          "Auth"
+        ],
+        "description": "",
+        "parameters": [
+          {
+            "name": "authorization",
+            "in": "header",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        },
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "email": {
+                    "example": "any"
+                  },
+                  "password": {
+                    "example": "any"
+                  }
+                }
+              }
+            }
           }
         }
       }
