# Backend/src/modules/authstaff/authstaff.model.js
@@ -1,16 +1,16 @@
 import pool from "../../../db/config.js";
 
-export const authtable = async () => {
-  const query = `
-    CREATE TABLE IF NOT EXISTS users (
+export const createStaffTable = async () => {
+    const query = `
+    CREATE TABLE IF NOT EXISTS staff (
       id SERIAL PRIMARY KEY,
       username VARCHAR(50) NOT NULL, 
       email VARCHAR(100) NOT NULL UNIQUE,
       password VARCHAR(255) NOT NULL,
-      role_name VARCHAR(50) NOT NULL, 
+      
       role_id INT REFERENCES roles(id) ON DELETE SET NULL,
-      team_id INT REFERENCES teams(id) ON DELETE SET NULL,
-      team_name VARCHAR(50) ,
+      role_name VARCHAR(50),
+
       reset_token VARCHAR(255),
       reset_token_expiry TIMESTAMP DEFAULT (CURRENT_TIMESTAMP + INTERVAL '15 minutes'),
 
@@ -21,10 +21,12 @@ export const authtable = async () => {
       updated_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP
     );
   `;
-  try {
-    await pool.query(query);
-    console.log("✅ Users table created with reset password support");
-  } catch (error) {
-    console.error("❌ Error creating users table:", error);
-  }
+    try {
+        await pool.query(query);
+        // Ensure role_name column exists (in case table was created before this column was added)
+        await pool.query(`ALTER TABLE staff ADD COLUMN IF NOT EXISTS role_name VARCHAR(50)`);
+        console.log("✅ Users table created (staff)");
+    } catch (error) {
+        console.error("❌ Error creating users table:", error);
+    }
 };
