# Backend/src/modules/authuser/authuser.validation.js
@@ -26,37 +26,6 @@ export const registerValidation = [
 
 
 
-export const registerStaffValidation = [
-    body("username")
-        .isString()
-        .withMessage("Username must be a string")
-        .trim()
-        .notEmpty()
-        .withMessage("Username is required"),
-    body("email")
-        .trim()
-        .notEmpty()
-        .withMessage("Email is required")
-        .isEmail()
-        .withMessage("Invalid email format"),
-    body("password")
-        .trim()
-        .notEmpty()
-        .withMessage("Password is required")
-        .isLength({ min: 6 })
-        .withMessage("Password must be at least 6 characters long"),
-    body("role_id")
-        .notEmpty()
-        .withMessage("Role ID is required")
-        .isNumeric()
-        .withMessage("Role ID must be numeric"),
-    body("role_name")
-        .notEmpty()
-        .withMessage("Role Name is required")
-        .isString()
-        .withMessage("Role Name must be string"),
-];
-
 export const loginValidation = [
     body("email")
         .trim()
